--- a/LittlePink-Book/Base.lproj/Main.storyboard
+++ b/LittlePink-Book/Base.lproj/Main.storyboard
@@ -230,7 +230,7 @@
         <!--Post-->
         <scene sceneID="ybR-Bx-nI5">
             <objects>
-                <viewController id="k6r-qU-n3W" sceneMemberID="viewController">
+                <viewController id="k6r-qU-n3W" customClass="PostVC" customModule="LittlePink_Book" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1jB-4E-fCq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
